--- a/angular.json
+++ b/angular.json
@@ -143,7 +143,7 @@
 			"root": "projects/wwlane-core-utility",
 			"sourceRoot": "projects/wwlane-core-utility/src",
 			"projectType": "library",
-			"prefix": "wwl-util",
+			"prefix": "wwl",
 			"architect": {
 				"build": {
 					"builder": "@angular-devkit/build-ng-packagr:build",
